--- a/code/config/test_config.yml
+++ b/code/config/test_config.yml
@@ -1,11 +1,17 @@
 ---
 paths:
-    code_core: ""  # has to be an absolute path to external code base
-    base_path: Dropbox/Icke/Work/DigiWest  # abs or relative to home
+    code_core:
+        - /Users/martinszyska/Sites/Bio/digiwest/code/py  # has to be an absolute path to external code base
+    # R_path: Sites/Bio/digiwest/code/R
+    R_paths:
+        Sites/Bio/digiwest/code/R:
+            - utils.R
+    base_path: Dropbox/Icke/Work/DigiWest/DigiWestBioinfo  # abs or relative to home
     # all paths belowe are absolute paths or relative to base_path
-    data_path: data
-    output_path: output
+    data_path: /Users/martinszyska/Dropbox/Icke/Work/DigiWest/data
+    output_path: output/Sarah
     info_path: info
+    config_path: code/config
     img_path: output/img
     tables_path: output/tables
 extract_data:  # here are the configs for the "load_and_save function"
@@ -13,6 +19,21 @@ extract_data:  # here are the configs for the "load_and_save function"
     read_lines: 0
     excel_sheet: RawData
     format_analytes: True
+    factors:
+        Pop:
+            - Tnaive
+            - Tcm+Tscm
+            - Tem+Temra
+        Cyto:
+            - wo
+            - IL-2
+            - CXCL9
+            - CXCL10
+            - CXCL11
+        Stim:
+            - unstim
+            - stim
+    extract_pattern: (?P<Pop>[^,]+), (?:[^,]+), (?P<Stim>[^,]+), (?P<Cyto>[^,]+)
 normscale:
     sample_cols: 
         - Pop
@@ -23,15 +44,30 @@ normscale:
         - Phospho
         - Peak
     norm2control:  # give the
-        data_cols:
+        WO:
+            data_cols:
             - medMFI_sc
             - logMFI_sc
-        norms:
-            - Cyto: wo
-            - Cyto: CXCL10
-            - Cyto: CXCL9
-        operations:
-            - min
+            norm_versus:
+                - Cyto: wo
+            operations:
+                - min
+        CXCL9:
+            data_cols:
+            - medMFI_sc
+            - logMFI_sc
+            norm_versus:
+                - Cyto: CXCL9
+            operations:
+                - min
+        CXCL10:
+            data_cols:
+            - medMFI_sc
+            - logMFI_sc
+            norm_versus:
+                - Cyto: CXCL10
+            operations:
+                - min
 plot_heatmap:
     figsize: [7,7]
     plot_type: png
@@ -56,12 +92,21 @@ plot_heatmap:
         - Cyto
         - Pop
         - Stim
-    show_cytos: # make new exclude list
-        - IL-2
-        - wo
-        - CXCL9
-        - CXCL10
-        - CXCL11
-    show_stims:
-        - unstim
-        - stim
+    show_data:
+        Cyto: # make new exclude list
+            - IL-2
+            - wo
+            - CXCL9
+            - CXCL10
+            - CXCL11
+        Stim:
+            - unstim
+            - stim
+    hide_data:
+        -
+            Cyto: wo
+            Stim: unstim
+        # -
+        #     Cells: Unt-Treg
+        #     Treatment: Tac
+
